==> pimoroni/micropython/ports/samd/machine_uart.c <==
#include "py/mphal.h"
#include "py/ringbuf.h"
#include "samd_soc.h"
#include "pin_af.h"
#define DEFAULT_UART_BAUDRATE (115200)
#define DEFAULT_BUFFER_SIZE (256)
#define MIN_BUFFER_SIZE  (32)
#define MAX_BUFFER_SIZE  (32766)
#define FLOW_CONTROL_RTS (1)
#define FLOW_CONTROL_CTS (2)
#define MP_UART_ALLOWED_FLAGS (SERCOM_USART_INTFLAG_RXC | SERCOM_USART_INTFLAG_TXC)
#define MICROPY_PY_MACHINE_UART_CLASS_CONSTANTS \
    { MP_ROM_QSTR(MP_QSTR_IRQ_RX), MP_ROM_INT(SERCOM_USART_INTFLAG_RXC) }, \
    { MP_ROM_QSTR(MP_QSTR_IRQ_TXIDLE), MP_ROM_INT(SERCOM_USART_INTFLAG_TXC) }, \
#define MICROPY_PY_MACHINE_UART_CLASS_CONSTANTS

static void mp_machine_uart_print(const mp_print_t *print, mp_obj_t self_in, mp_print_kind_t kind) {
    machine_uart_obj_t *self = MP_OBJ_TO_PTR(self_in);
    mp_printf(print, "UART(%u, baudrate=%u, bits=%u, parity=%s, stop=%u, "
        "timeout=%u, timeout_char=%u, rxbuf=%d"
        #if MICROPY_HW_UART_TXBUF
        ", txbuf=%d"
        #endif
        #if MICROPY_HW_UART_RTSCTS
        ", rts=%q, cts=%q"
        #endif
        #if MICROPY_PY_MACHINE_UART_IRQ
        ", irq=%d"
        #endif
        ")",
        self->id, self->baudrate, self->bits, _parity_name[self->parity],
        self->stop + 1, self->timeout, self->timeout_char, self->read_buffer.size - 1
        #if MICROPY_HW_UART_TXBUF
        , self->write_buffer.size - 1
        #endif
        #if MICROPY_HW_UART_RTSCTS
        , self->rts != 0xff ? pin_find_by_id(self->rts)->name : MP_QSTR_None
        , self->cts != 0xff ? pin_find_by_id(self->cts)->name : MP_QSTR_None
        #endif
        #if MICROPY_PY_MACHINE_UART_IRQ
        , self->mp_irq_trigger
        #endif
        );
}

static void mp_machine_uart_init_helper(machine_uart_obj_t *self, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    enum { ARG_baudrate, ARG_bits, ARG_parity, ARG_stop, ARG_tx, ARG_rx,
           ARG_timeout, ARG_timeout_char, ARG_rxbuf, ARG_txbuf, ARG_rts, ARG_cts };
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_baudrate, MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_bits, MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_parity, MP_ARG_OBJ, {.u_rom_obj = MP_ROM_INT(-1)} },
        { MP_QSTR_stop, MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_tx, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE} },
        { MP_QSTR_rx, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE} },
        { MP_QSTR_timeout, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_timeout_char, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_rxbuf, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_txbuf, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
        #if MICROPY_HW_UART_RTSCTS
        { MP_QSTR_rts, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE} },
        { MP_QSTR_cts, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE} },
        #endif
    };

    // Parse args
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    // Set baudrate if configured.
    if (args[ARG_baudrate].u_int > 0) {
        self->baudrate = args[ARG_baudrate].u_int;
    }

    // Set bits if configured.
    if (args[ARG_bits].u_int > 0) {
        self->bits = args[ARG_bits].u_int;
    }

    // Set parity if configured.
    if (args[ARG_parity].u_obj != MP_OBJ_NEW_SMALL_INT(-1)) {
        if (args[ARG_parity].u_obj == mp_const_none) {
            self->parity = 0;
        } else if (mp_obj_get_int(args[ARG_parity].u_obj) & 1) {
            self->parity = 1;  // odd
        } else {
            self->parity = 2;  // even
        }
    }

    // Set stop bits if configured.
    if (args[ARG_stop].u_int > 0) {
        self->stop = (args[ARG_stop].u_int - 1) & 1;
    }

    // Set TX/RX pins if configured.
    if (args[ARG_tx].u_obj != mp_const_none) {
        self->tx = mp_hal_get_pin_obj(args[ARG_tx].u_obj);
    }
    if (args[ARG_rx].u_obj != mp_const_none) {
        self->rx = mp_hal_get_pin_obj(args[ARG_rx].u_obj);
    }
    self->flow_control = 0;
    #if MICROPY_HW_UART_RTSCTS
    // Set RTS/CTS pins if configured.
    if (args[ARG_rts].u_obj != mp_const_none) {
        self->rts = mp_hal_get_pin_obj(args[ARG_rts].u_obj);
        self->rts_pad_config = get_sercom_config(self->rts, self->id);
        self->flow_control = FLOW_CONTROL_RTS;
    }
    if (args[ARG_cts].u_obj != mp_const_none) {
        self->cts = mp_hal_get_pin_obj(args[ARG_cts].u_obj);
        self->cts_pad_config = get_sercom_config(self->cts, self->id);
        self->flow_control |= FLOW_CONTROL_CTS;
    }
    // rts only flow control is not allowed. Otherwise the state of the
    // cts pin is undefined.
    if (self->flow_control == FLOW_CONTROL_RTS) {
        mp_raise_ValueError(MP_ERROR_TEXT("cts missing for flow control"));
    }
    #endif

    // Set timeout if configured.
    if (args[ARG_timeout].u_int >= 0) {
        self->timeout = args[ARG_timeout].u_int;
    }

    // Set timeout_char if configured.
    if (args[ARG_timeout_char].u_int >= 0) {
        self->timeout_char = args[ARG_timeout_char].u_int;
    }

    // Set the RX buffer size if configured.
    size_t rxbuf_len = DEFAULT_BUFFER_SIZE;
    if (args[ARG_rxbuf].u_int > 0) {
        rxbuf_len = args[ARG_rxbuf].u_int;
        if (rxbuf_len < MIN_BUFFER_SIZE) {
            rxbuf_len = MIN_BUFFER_SIZE;
        } else if (rxbuf_len > MAX_BUFFER_SIZE) {
            mp_raise_ValueError(MP_ERROR_TEXT("rxbuf too large"));
        }
    }

    #if MICROPY_HW_UART_TXBUF
    // Set the TX buffer size if configured.
    size_t txbuf_len = DEFAULT_BUFFER_SIZE;
    if (args[ARG_txbuf].u_int > 0) {
        txbuf_len = args[ARG_txbuf].u_int;
        if (txbuf_len < MIN_BUFFER_SIZE) {
            txbuf_len = MIN_BUFFER_SIZE;
        } else if (txbuf_len > MAX_BUFFER_SIZE) {
            mp_raise_ValueError(MP_ERROR_TEXT("txbuf too large"));
        }
    }
    #endif
    // Initialise the UART peripheral if any arguments given, or it was not initialised previously.
    if (n_args > 0 || kw_args->used > 0 || self->new) {
        self->new = false;

        // Check the rx/tx pin assignments
        if (self->tx == 0xff || self->rx == 0xff || (self->tx / 4) != (self->rx / 4)) {
            mp_raise_ValueError(MP_ERROR_TEXT("Non-matching or missing rx/tx"));
        }
        self->rx_pad_config = get_sercom_config(self->rx, self->id);
        self->tx_pad_config = get_sercom_config(self->tx, self->id);

        // Make sure timeout_char is at least as long as a whole character (13 bits to be safe).
        uint32_t min_timeout_char = 13000 / self->baudrate + 1;
        if (self->timeout_char < min_timeout_char) {
            self->timeout_char = min_timeout_char;
        }

        // Allocate the RX/TX buffers.
        ringbuf_alloc(&(self->read_buffer), rxbuf_len + 1);

        #if MICROPY_HW_UART_TXBUF
        ringbuf_alloc(&(self->write_buffer), txbuf_len + 1);
        #endif

        // Step 1: Configure the Pin mux.
        mp_hal_set_pin_mux(self->rx, self->rx_pad_config.alt_fct);
        mp_hal_set_pin_mux(self->tx, self->tx_pad_config.alt_fct);

        // Next: Set up the clocks
        enable_sercom_clock(self->id);

        // Configure the sercom module
        machine_sercom_configure(self);
    }
}

static mp_obj_t mp_machine_uart_make_new(const mp_obj_type_t *type, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 1, MP_OBJ_FUN_ARGS_MAX, true);

    // Get UART bus.
    int uart_id = mp_obj_get_int(args[0]);
    if (uart_id < 0 || uart_id > SERCOM_INST_NUM) {
        mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("UART(%d) doesn't exist"), uart_id);
    }

    // Create the UART object and fill it with defaults.
    machine_uart_obj_t *self = mp_obj_malloc(machine_uart_obj_t, &machine_uart_type);
    self->id = uart_id;
    self->baudrate = DEFAULT_UART_BAUDRATE;
    self->bits = 8;
    self->stop = 0;
    self->timeout = 1;
    self->timeout_char = 1;
    self->tx = 0xff;
    self->rx = 0xff;
    #if MICROPY_HW_UART_RTSCTS
    self->rts = 0xff;
    self->cts = 0xff;
    #endif
    #if MICROPY_PY_MACHINE_UART_IRQ
    self->mp_irq_obj = NULL;
    #endif
    self->new = true;
    MP_STATE_PORT(sercom_table[uart_id]) = self;

    mp_map_t kw_args;
    mp_map_init_fixed_table(&kw_args, n_kw, args + n_args);
    mp_machine_uart_init_helper(self, n_args - 1, args + 1, &kw_args);

    return MP_OBJ_FROM_PTR(self);
}

static void mp_machine_uart_sendbreak(machine_uart_obj_t *self) {
    uint32_t break_time_us = 13 * 1000000 / self->baudrate;

    // Wait for the tx buffer to drain.
    #if MICROPY_HW_UART_TXBUF
    while (ringbuf_avail(&self->write_buffer) > 0) {
        MICROPY_EVENT_POLL_HOOK
    }
    #endif
    // Wait for the TX queue & register to clear
    // Since the flags are not safe, just wait sufficiently long.
    mp_hal_delay_us(2 * break_time_us);
    // Disable MUX
    PORT->Group[self->tx / 32].PINCFG[self->tx % 32].bit.PMUXEN = 0;
    // Set TX pin to low for break time
    mp_hal_pin_low(self->tx);
    mp_hal_delay_us(break_time_us);
    mp_hal_pin_high(self->tx);
    // Enable Mux again
    mp_hal_set_pin_mux(self->tx, self->tx_pad_config.alt_fct);
}

static mp_uint_t mp_machine_uart_read(mp_obj_t self_in, void *buf_in, mp_uint_t size, int *errcode) {
    machine_uart_obj_t *self = MP_OBJ_TO_PTR(self_in);
    Sercom *uart = sercom_instance[self->id];
    uint64_t t = mp_hal_ticks_ms_64() + self->timeout;
    uint64_t timeout_char = self->timeout_char;
    uint8_t *dest = buf_in;

    for (size_t i = 0; i < size; i++) {
        // Wait for the first/next character
        while (ringbuf_avail(&self->read_buffer) == 0) {
            if (mp_hal_ticks_ms_64() > t) {  // timed out
                if (i <= 0) {
                    *errcode = MP_EAGAIN;
                    return MP_STREAM_ERROR;
                } else {
                    return i;
                }
            }
            MICROPY_EVENT_POLL_HOOK
        }
        *dest++ = ringbuf_get(&(self->read_buffer));
        t = mp_hal_ticks_ms_64() + timeout_char;
        // (Re-)Enable RXC interrupt
        if ((uart->USART.INTENSET.reg & SERCOM_USART_INTENSET_RXC) == 0) {
            uart->USART.INTENSET.reg = SERCOM_USART_INTENSET_RXC;
        }
    }
    return size;
}

static mp_uint_t mp_machine_uart_write(mp_obj_t self_in, const void *buf_in, mp_uint_t size, int *errcode) {
    machine_uart_obj_t *self = MP_OBJ_TO_PTR(self_in);
    size_t i = 0;
    const uint8_t *src = buf_in;
    Sercom *uart = sercom_instance[self->id];

    uint64_t t = mp_hal_ticks_ms_64() + self->timeout;
    #if MICROPY_HW_UART_TXBUF

    #if MICROPY_PY_MACHINE_UART_IRQ
    // Prefill the FIFO to get rid of the initial IRQ_TXIDLE event
    while (i < size && ringbuf_free(&(self->write_buffer)) > 0) {
        ringbuf_put(&(self->write_buffer), *src++);
        i++;
    }
    uart->USART.INTENSET.reg = SERCOM_USART_INTENSET_DRE; // kick off the IRQ
    #endif
    while (i < size) {
        // Wait for the first/next character to be sent.
        while (ringbuf_free(&(self->write_buffer)) == 0) {
            if (mp_hal_ticks_ms_64() > t) {  // timed out
                if (i <= 0) {
                    *errcode = MP_EAGAIN;
                    return MP_STREAM_ERROR;
                } else {
                    return i;
                }
            }
            MICROPY_EVENT_POLL_HOOK
        }
        ringbuf_put(&(self->write_buffer), *src++);
        i++;
        uart->USART.INTENSET.reg = SERCOM_USART_INTENSET_DRE; // kick off the IRQ
    }

    #else

    while (i < size) {
        while (!(uart->USART.INTFLAG.bit.DRE)) {
            if (mp_hal_ticks_ms_64() > t) {  // timed out
                if (i <= 0) {
                    *errcode = MP_EAGAIN;
                    return MP_STREAM_ERROR;
                } else {
                    return i;
                }
            }
            MICROPY_EVENT_POLL_HOOK
        }
        uart->USART.DATA.bit.DATA = *src++;
        i++;
    }
    #endif
    return size;
}

static mp_uint_t mp_machine_uart_ioctl(mp_obj_t self_in, mp_uint_t request, uintptr_t arg, int *errcode) {
    machine_uart_obj_t *self = self_in;
    mp_uint_t ret;
    Sercom *uart = sercom_instance[self->id];
    if (request == MP_STREAM_POLL) {
        uintptr_t flags = arg;
        ret = 0;
        if ((flags & MP_STREAM_POLL_RD) && (uart->USART.INTFLAG.bit.RXC != 0 || ringbuf_avail(&self->read_buffer) > 0)) {
            ret |= MP_STREAM_POLL_RD;
        }
        if ((flags & MP_STREAM_POLL_WR) && (uart->USART.INTFLAG.bit.DRE != 0
                                            #if MICROPY_HW_UART_TXBUF
                                            || ringbuf_avail(&self->write_buffer) > 0
                                            #endif
                                            )) {
            ret |= MP_STREAM_POLL_WR;
        }
    } else if (request == MP_STREAM_FLUSH) {
        // The timeout is defined by the buffer size and the baudrate.
        // Take the worst case assumptions at 13 bit symbol size times 2.
        uint64_t timeout = mp_hal_ticks_ms_64() + (3
            #if MICROPY_HW_UART_TXBUF
            + self->write_buffer.size
            #endif
            ) * 13000 * 2 / self->baudrate;
        do {
            if (mp_machine_uart_txdone(self)) {
                return 0;
            }
            MICROPY_EVENT_POLL_HOOK
        } while (mp_hal_ticks_ms_64() < timeout);
        *errcode = MP_ETIMEDOUT;
        ret = MP_STREAM_ERROR;
    } else {
        *errcode = MP_EINVAL;
        ret = MP_STREAM_ERROR;
    }
    return ret;
}
